# Detection-of-welding-seams

./: Makefile  README.md  pyproject.toml  requirements.txt
Detection-of-welding-seams/: api.py  tg.py
frontend/: main.py  pyproject.toml  requirements.txt
frontend/streamlit/: zapusk.py
frontend/streamlit/funcc/: ostalnoe.py  risovashka.py
frontend/streamlit/pages_/: __init__.py  main.py  videos_from_archive.py
notebooks/: convert-yolo-annotations-to-coco-pascal-voc.ipynb  crazing_2.txt  risovvashka.ipynb  trtssplit.ipynb  xmltoyolo.ipynb
tgbot/: bot.py  photos.db
train_yolo/: new_train.yaml  pred_train.yaml  submission.csv  train.yaml  yolo.ipynb  yolo_2.ipynb  yolov10_model_tr.pt
train_yolo/wandb/: latest-run
train_yolo/wandb/run-20240613_232518-ioimo1tu/: run-ioimo1tu.wandb
train_yolo/wandb/run-20240613_233009-arc4fepv/: run-arc4fepv.wandb
train_yolo/wandb/run-20240613_234049-uexcs5n7/: run-uexcs5n7.wandb
train_yolo/wandb/run-20240614_161133-ovef1z70/: run-ovef1z70.wandb
train_yolo/wandb/run-20240614_162237-sgcbsh2c/: run-sgcbsh2c.wandb
train_yolo/wandb/run-20240614_163827-gbn4ijq6/: run-gbn4ijq6.wandb
train_yolo/wandb/run-20240614_164400-46c4e4oz/: run-46c4e4oz.wandb
train_yolo/wandb/run-20240614_165741-zkrt0mif/: run-zkrt0mif.wandb
train_yolo/wandb/run-20240614_175448-7wez56cx/: run-7wez56cx.wandb
train_yolo/wandb/run-20240614_200039-plniwpf3/: run-plniwpf3.wandb
train_yolo/wandb/run-20240614_200312-698z7un5/: run-698z7un5.wandb
train_yolo/wandb/run-20240614_202609-qyi4570j/: run-qyi4570j.wandb
(+92 files in other folders)
