[tool.poetry]
name = "atomic hack"
version = "0.1.0"
description = "ikanam hack"
authors = ["ikanam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.28.1"
opencv-python = "^4.10.0.82"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
